--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "m/sql",
     "type": "library",
+    "version": "0.1.0",
     "license": "MIT",
     "authors": [
         {
@@ -9,10 +10,9 @@
         }
     ],
     "require-dev": {
-        "satooshi/php-coveralls"        : "^1.0",
-        "phpunit/phpunit"               : "^9"
+        "satooshi/php-coveralls": "^1.0",
+        "phpunit/phpunit": "^9"
     },
-    "minimum-stability": "dev",
     "require": {},
     "autoload": {
         "psr-4": {
