--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit bootstrap = "vendor/autoload.php"
+<phpunit
+    bootstrap = "vendor/autoload.php"
     backupGlobals               = "false"
     backupStaticAttributes      = "false"
     colors                      = "true"
@@ -11,13 +12,13 @@
     stopOnFailure               = "false"
 >
     <testsuites>
-        <testsuite name="Project Test Suite">
-            <directory>tests</directory>
+        <testsuite name="Test Suite">
+            <directory suffix="Test.php">test</directory>
         </testsuite>
     </testsuites>
 
     <php>
-        <env name="APP_ENV" value="testing"/>
+        <env name="TEST_DB" value="mysql://user:pass@localhost/test" />
     </php>
 
 </phpunit>
